Added kaminari for pagination. Lacks css adjustments.

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,4 +1,11 @@
-pt-BR:
+pt:
+  views:
+    pagination:
+      first: "Primeira"
+      last: "Última"
+      previous: "&lt;"
+      next: ">"
+      truncate: "&hellip;"
   date:
     abbr_day_names:
     - Dom
